# md2tsvs

./: README.md  pyproject.toml  requirements.txt
md2tsvs/: md2tsvs.py
