[tool.poetry]
name = "md2tsvs"
version = "0.1.0"
description = ""
authors = ["Mark A. Miller <mamillerpa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pymark = "*"
markdown = "*"
click = "*"
beautifulsoup4 = "*"
pandas = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
